feat: reorganize into data/, cli/, docker/ structure with updated configs and docs
- Move input/ → data/input/, output/ → data/output/
- Reorganize CLI into cli/ with main.py and .env.example
- Reorganize Docker web app into docker/ (app.py, docker-compose.yml, Dockerfile)
- Move core pipeline modules remain in core/
- Update config.yaml paths to use data/input and data/output
- Update all docs (README, QUICKSTART, DOCKER, IMPLEMENTATION, REORGANIZATION)
- Update Dockerfile to create /app/data/{input,output} and copy from new structure
- Fix docker-compose volumes to mount ../data/{input,output}
- Add requirements-base.txt for CLI dependencies
- Update docker/requirements-web.txt to reference co-located base file
- Fix cli/main.py to resolve config.yaml relative to repo root

--- a/config.yaml
+++ b/config.yaml
@@ -2,11 +2,15 @@ project:
   # Name used for output files (xlsx and html)
   name: "MyProject"
   # Directory where output files will be saved
-  output_path: "./output/"
+  output_path: "./data/output/"
+  # Timezone for file timestamps (e.g., "Europe/Berlin", "UTC", "America/New_York")
+  # Set via environment variable: ALONGGPX_TIMEZONE
+  # See: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+  timezone: "Europe/Berlin"
 
 input:
   # Path to the GPX file containing the track to analyze
-  gpx_file: "./input/track.gpx"
+  gpx_file: "./data/input/track.gpx"
 
 search:
   # Search radius in kilometers around each track segment
