Redesign Map v4 + nginx fix

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,31 +22,16 @@ services:
     networks:
       - alonggpx-network
 
-  # React frontend
-  frontend:
+  # Nginx reverse proxy + frontend
+  nginx:
     build:
       context: ..
-      dockerfile: web/Dockerfile
-    container_name: alonggpx-frontend
-    environment:
-      - NODE_ENV=production
-    depends_on:
-      - app
-    restart: unless-stopped
-    networks:
-      - alonggpx-network
-
-  # Nginx reverse proxy
-  nginx:
-    image: nginx:alpine
+      dockerfile: docker/Dockerfile.nginx
     container_name: alonggpx-nginx
     ports:
       - "3000:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - app
-      - frontend
     restart: unless-stopped
     networks:
       - alonggpx-network
