--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -7,15 +7,11 @@ server {
     listen 80;
     server_name localhost;
 
-    # Frontend static files
+    # Frontend static files (built dist folder)
     location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
         try_files $uri $uri/ /index.html;
-        proxy_pass http://frontend:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
     }
 
     # WebSocket for job progress
