modified:   deployment/nginx.conf

--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -16,7 +16,7 @@ server {
 
     # WebSocket for job progress
     location /socket.io/ {
-        proxy_pass http://app:5000/socket.io/;
+        proxy_pass http://backend:5000/socket.io/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
@@ -27,7 +27,7 @@ server {
 
     # Backend API
     location /api/ {
-        proxy_pass http://app:5000/api/;
+        proxy_pass http://backend:5000/api/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -37,7 +37,7 @@ server {
 
     # Health check
     location /health {
-        proxy_pass http://app:5000/health;
+        proxy_pass http://backend:5000/health;
         proxy_http_version 1.1;
     }
 }
