Increase upload size to 5mb for nginx, decrease it to 5mb for flask

--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -6,6 +6,9 @@ map $http_upgrade $connection_upgrade {
 server {
     listen 80;
     server_name localhost;
+    
+    # Allow large file uploads (must match Flask's MAX_CONTENT_LENGTH)
+    client_max_body_size 5M;
 
     # Frontend static files (built dist folder)
     location / {
